<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/beige"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strTitulo"
            android:textSize="40dp"
            android:textColor="@color/black"
            android:textAlignment="center"/>
        <View
            android:layout_width="500dp"
            android:layout_height="10dp"
            android:background="@color/black"/>
        <View
            android:layout_width="500dp"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/tvTiempoActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:text="@string/strTiempoActual"/>

        <RadioGroup
            android:id="@+id/rgOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:background="@color/white">

            <RadioButton
                android:id="@+id/rbOpcion_0"
                style="@style/styOpciones"
                android:text="@string/strOpcion_0"/>

            <RadioButton
                android:id="@+id/rbOpcion_1"
                style="@style/styOpciones"
                android:text="@string/strOpcion_1"/>

            <RadioButton
                android:id="@+id/rbOpcion_2"
                style="@style/styOpciones"
                android:text="@string/strOpcion_2"/>

            <RadioButton
                android:id="@+id/rbOpcion_3"
                style="@style/styOpciones"
                android:text="@string/strOpcion_3"/>

            <RadioButton
                android:id="@+id/rbOpcion_4"
                style="@style/styOpciones"
                android:text="@string/strOpcion_4"/>

            <RadioButton
                android:id="@+id/rbOpcion_5"
                style="@style/styOpciones"
                android:text="@string/strOpcion_5"/>

            <RadioButton
                android:id="@+id/rbOpcion_6"
                style="@style/styOpciones"
                android:text="@string/strOpcion_6"/>

            <RadioButton
                android:id="@+id/rbOpcion_7"
                style="@style/styOpciones"
                android:text="@string/strOpcion_7"/>

            <RadioButton
                android:id="@+id/rbOpcion_8"
                style="@style/styOpciones"
                android:text="@string/strOpcion_8"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnEnviarOrden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:textSize="25dp"
            android:text="@string/strEnviarOrden"
            android:layout_marginBottom="40dp"/>
        <Button
            android:id="@+id/btnUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:textSize="20dp"
            android:text="@string/strUsuario"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>