<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dialogs.DialogoEstadisticas"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strTituloEstadisticas"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_margin="10dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_column="0"
                android:text="@string/strBobinas"
                style="@style/styTituloColumnas"/>
            <TextView
                android:layout_column="1"
                android:text="@string/strHoras"
                style="@style/styTituloColumnas"/>
            <TextView
                android:layout_column="2"
                android:text="@string/strCiclos"
                style="@style/styTituloColumnas"/>

            <!-- #################################### -->
            <TextView
                android:layout_column="0"
                android:text="@string/strOpcion_1"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvHoras_1"
                android:layout_column="1"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvCiclos_1"
                android:layout_column="2"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>

            <!-- #################################### -->
            <TextView
                android:layout_column="0"
                android:text="@string/strOpcion_2"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvHoras_2"
                android:layout_column="1"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvCiclos_2"
                android:layout_column="2"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <!-- #################################### -->
            <TextView
                android:layout_column="0"
                android:text="@string/strOpcion_3"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvHoras_3"
                android:layout_column="1"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvCiclos_3"
                android:layout_column="2"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <!-- #################################### -->
            <TextView
                android:layout_column="0"
                android:text="@string/strOpcion_4"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvHoras_4"
                android:layout_column="1"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvCiclos_4"
                android:layout_column="2"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <!-- #################################### -->
            <TextView
                android:layout_column="0"
                android:text="@string/strOpcion_5"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvHoras_5"
                android:layout_column="1"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvCiclos_5"
                android:layout_column="2"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <!-- #################################### -->
            <TextView
                android:layout_column="0"
                android:text="@string/strOpcion_6"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvHoras_6"
                android:layout_column="1"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvCiclos_6"
                android:layout_column="2"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <!-- #################################### -->
            <TextView
                android:layout_column="0"
                android:text="@string/strOpcion_7"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvHoras_7"
                android:layout_column="1"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvCiclos_7"
                android:layout_column="2"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <!-- #################################### -->
            <TextView
                android:layout_column="0"
                android:text="@string/strOpcion_8"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvHoras_8"
                android:layout_column="1"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>
            <TextView
                android:id="@+id/tvCiclos_8"
                android:layout_column="2"
                android:text="@string/strNumero"
                style="@style/styContenidoColumnas"/>


        </GridLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <Button
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/strVolver"
            android:backgroundTint="@color/black"
            android:layout_margin="10dp"/>
    </LinearLayout>
</FrameLayout>